2014-07-01  Trevor Saunders  <tsaunders@mozilla.com>

	* config/i386/winnt.c (i386_pe_section_type_flags): Revert previous
	change for not being obvious.

2014-07-01  Trevor Saunders  <tsaunders@mozilla.com>

	* config/i386/winnt.c (i386_pe_section_type_flags): Remove name of
	unused argument.

2014-07-01  Kyrylo Tkachov  <kyrylo.tkachov@arm.com>

	* config/aarch64/arm_neon.h (vcage_f64): New intrinsic.
	(vcagt_f64): Likewise.
	(vcale_f64): Likewise.
	(vcaled_f64): Likewise.
	(vcales_f32): Likewise.
	(vcalt_f64): Likewise.
	(vcaltd_f64): Likewise.
	(vcalts_f32): Likewise.

2014-07-01  Marek Polacek  <polacek@redhat.com>

	* doc/invoke.texi: Document -Wint-conversion.

2014-07-01  Marek Polacek  <polacek@redhat.com>

	PR c/58286
	* doc/invoke.texi: Document -Wincompatible-pointer-types.

2014-07-01  Martin Liska  <mliska@suse.cz>

	IPA REF alias refactoring
	* cgraph.h (iterate_direct_aliases): New function.
	(FOR_EACH_ALIAS): New macro iterates all direct aliases for a node.
	* cgraph.c (cgraph_for_node_thunks_and_aliases): Usage of
	FOR_EACH_ALIAS added.
	(cgraph_for_node_and_aliases): Likewise.
	* cgraphunit.c (assemble_thunks_and_aliases): Likewise.
	* ipa-inline.c (reset_edge_caches): Likewise.
	(update_caller_keys): Likewise.
	* trans-mem.c (ipa_tm_execute): Likewise.
	*varpool.c (varpool_analyze_node): Likewise.
	(varpool_for_node_and_aliases): Likewise.
	* ipa-ref.h (first_alias): New function.
	(last_alias): Likewise.
	(has_aliases_p): Likewise.
	* ipa-ref.c (ipa_ref::remove_reference): Removal function
	is sensitive to IPA_REF_ALIASes.
	* symtab.c (symtab_node::add_reference): Node of IPA_REF_ALIAS type
	are put at the beginning of the list.
	(symtab_node::iterate_direct_aliases): New function.

2014-06-28  Jan Hubicka  <hubicka@ucw.cz>

	Revert:
	* tree-streamer-out.c (pack_ts_type_common_value_fields): Stream if type
	is complete.
	(write_ts_type_common_tree_pointers): Do not stream fields not set for incomplete